--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,18 +4,28 @@
 
 		<ion-slide-box show-pager = "true" does-continue = "true" pager-click = "true" auto-play = "true" slide-interval = "5000">
 			<ion-slide ng-repeat = "count in [1,2,3,4]">
-				<img ng-src = "img/home_slider/{{count}}.jpeg" class = "full-image"/>
+				<img ng-src = "img/home_slider/{{count}}.jpg" style = "max-height:180px;" class = "full-image"/>
 			</ion-slide>
 		</ion-slide-box>
 
 		<ion-list class = "list-card"> 
 			
 			<ion-item class = "item-dividier item-button-right"> Shop by Category
-				<button class = "button button-small button-clear button-assertive"> View All 
-				</button>
+				<button class = "button button-small button-clear button-assertive" ui-sref = "app.categories"> View All </button>
 			</ion-item>
-
+			<!-- <ion-item class = "item-avatar-left" ng-repeat = "cat in mainCategories" ui-sref = "app.category({categoryID: cat.slug})"> 
+				<img ng-src = "http://loremflickr.com/64/64"/>
+				<h2>{{cat.name}}</h2>
+				<p>{{cat.description}}</p>
+			</ion-item> -->
 		</ion-list>
-
+		<ion-list class = "item-body">
+			<ion-item class = "item-image padding">
+				<img src = "img/footer.png" style = "width:50%; height:50%"/>
+			</ion-item>
+			<ion-item>
+				<div style = "font-size: 10px; text-align: center;"> Developed by Kyle Kruskamp</div>
+			</ion-item>
+	    </ion-list>
 	</ion-content>
 </ion-view>
