--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,5 +1,6 @@
 <ion-side-menus>
 	<ion-side-menu-content>
+
 		<ion-nav-bar class = "bar-stable">
 			<ion-nav-back-button> </ion-nav-back-button>
 
@@ -9,8 +10,8 @@
 			</ion-nav-buttons>
 
 			<ion-nav-buttons side = "right">
-				<button class = "button button-icon button-clear ion-android-cart">
-					<span class = "badge badge-assertive"> 2 </span>
+				<button class = "button button-icon button-clear ion-android-cart" ng-click = "showCartModal()">
+					<span class = "badge badge-assertive"> {{cartNumber}} </span>
 				</button>
 
 			</ion-nav-buttons>
@@ -19,14 +20,16 @@
 		<ion-nav-view name = "menuContent"> </ion-nav-view>
 	</ion-side-menu-content>
 	
-	<ion-side-menu>
+<ion-side-menu>
+
 		<img src = "img/menu.jpg" style = "width:100%; height:auto">
-		<ion-list>
-			<ion-item> Login </ion-item>
-			<ion-item> Home </ion-item>
-			<ion-item> Browse </ion-item>
-			<ion-item class = "item-divider"> Categories </ion-item>
-			<ion-item ng-repeat = "cat in mainCategories"> {{cat.name}} </ion-item>
-		</ion-list>
-	</ion-side-menu>
+			<ion-list>
+				<ion-item> Login </ion-item>
+				<ion-item menu-close ui-sref = "app.signup"> Sign Up </ion-item>
+				<ion-item menu-close ui-sref = "app.home"> Home </ion-item>
+				<ion-item menu-close ui-sref = "app.browse"> Browse </ion-item>
+				<!-- <ion-item class = "item-divider"> Categories </ion-item>
+				<ion-item ng-repeat = "cat in mainCategories"> {{cat.name}} </ion-item> -->
+			</ion-list>
+		</ion-side-menu>
 </ion-side-menus>
