updating computer scared im gonna lose everything

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -13,11 +13,11 @@
 			<ion-item class = "item-dividier item-button-right"> Shop by Category
 				<button class = "button button-small button-clear button-assertive" ui-sref = "app.categories"> View All </button>
 			</ion-item>
-			<!-- <ion-item class = "item-avatar-left" ng-repeat = "cat in mainCategories" ui-sref = "app.category({categoryID: cat.slug})"> 
+			<ion-item class = "item-avatar-left" ng-repeat = "cat in mainCategories" ui-sref = "app.category({categoryID: cat.slug})"> 
 				<img ng-src = "http://loremflickr.com/64/64"/>
 				<h2>{{cat.name}}</h2>
 				<p>{{cat.description}}</p>
-			</ion-item> -->
+			</ion-item>
 		</ion-list>
 		<ion-list class = "item-body">
 			<ion-item class = "item-image padding">
