--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -1,4 +1,4 @@
-<!-- <ion-vew view-title = "Product Categories">
+<ion-vew view-title = "Product Categories">
 	<ion-content>
 		<ion-list class = "card">
 			<ion-item ng-repeat = "category in categories" class = "item-avatar-left item-text-wrap">
@@ -8,4 +8,4 @@
 			</ion-item>
 		</ion-list>
 	</ion-content>
-</ion-vew> -->
+</ion-vew>
