--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -1,4 +1,4 @@
-<!-- <ion-view>
+<ion-view>
 	<ion-nav-title>Search by Category</ion-nav-title>
 		<ion-content>
 			<div class = "list">
@@ -14,4 +14,4 @@
 			</div>
 		</ion-content>
 	</ion-view>
-</ion-view> -->
+</ion-view>
