FINALLY FINALLY FIXED CORS ERROR YESS!

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,7 +24,7 @@
 
 		<img src = "img/menu.jpg" style = "width:100%; height:auto">
 			<ion-list>
-				<ion-item> Login </ion-item>
+				<ion-item menu-close ui-sref = "app.login"> Login </ion-item>
 				<ion-item menu-close ui-sref = "app.signup"> Sign Up </ion-item>
 				<ion-item menu-close ui-sref = "app.home"> Home </ion-item>
 				<ion-item menu-close ui-sref = "app.browse"> Browse </ion-item>
